Fix IndexOutOfBounds